--- a/index.html
+++ b/index.html
@@ -162,65 +162,65 @@
         <div class="col" id="block-dropdown" style="display:none; text-align:left">
           <select class="metric-selection2" style="width: 200px; text-align:left">
             <optgroup label="Social">
-                <option value='sequ' max='75' min='20' breaks='20,36.387,44.594,52.801' label='AGE'>Age</option>
+                <option value='sequ' max='75' min='20' breaks='20,36.387,44.594,52.801' label='AGE' legend='none'>Age</option>
                 <!-- <option value='sequ' max='1' min='0' breaks='0,0.023,0.27,0.517' label='GEN_M'>GEN_M</option> -->
-                <option value='sequ' max='1' min='0' breaks='0,0.445,0.707,0.969' label='GEN_F'>Gender</option>
-                <option value='sequ' max='55' min='0' breaks='0,1.883,18.375,34.867' label='NUM_YR_SP'>Years in São Paulo</option>
-                <option value='sequ' max='32' min='0' breaks='0,5.491,12.48,19.468' label='NUM_YR_HSE'>Years in Current Dwelling</option>
-                <option value='sequ' max='1' min='0' breaks='0,0.07,0.333,0.596' label='BRTH_SP'>Native Paulista</option>
-                <option value='sequ' max='1' min='0' breaks='0,0.541,0.81,1.078' label='BRTH_REG_NE'>Non Native Paulista - North-East</option>
-                <option value='sequ' max='1' min='0' breaks='0,0.1,0.139,0.344' label='BRTH_REG_S'>Non Native Paulista - South-Central</option>
-                <option value='sequ' max='1' min='0' breaks='0,0.1,0.234,0.545' label='DISP_Y'>Displacement</option>
-                <option value='sequ' max='14.625' min='0' breaks='0,0.1,1.421,2.981' label='NUM_FAM_LOT'>Lot Occupation</option>
-                <option value='sequ' max='7.5' min='0' breaks='0,2.344,3.557,4.77' label='NUM_PPL_HSHD'>Household Inhabitants</option>
-                <option value='sequ' max='1' min='0' breaks='0,0.01,0.1,0.287' label='ED_LVL_0'>Respondent Education - None</option>
-                <option value='sequ' max='1' min='0' breaks='0,0.151,0.427,0.703' label='ED_LVL_1'>Respondent Education - Elementary</option>
-                <option value='sequ' max='1' min='0' breaks='0,0.098,0.352,0.606' label='ED_LVL_2'>Respondent Education - High School</option>
-                <option value='sequ' max='1' min='0' breaks='0,0.01,0.106,0.275' label='ED_LVL_3'>Respondent Education - Undergraduate Deg.</option>
+                <option value='sequ' max='1' min='0' breaks='0,0.445,0.707,0.969' label='GEN_F' legend='gender'>Gender</option>
+                <option value='sequ' max='55' min='0' breaks='0,1.883,18.375,34.867' label='NUM_YR_SP' legend='none'>Years in São Paulo</option>
+                <option value='sequ' max='32' min='0' breaks='0,5.491,12.48,19.468' label='NUM_YR_HSE' legend='none'>Years in Current Dwelling</option>
+                <option value='sequ' max='1' min='0' breaks='0,0.07,0.333,0.596' label='BRTH_SP' legend='secureA'>Native Paulista</option>
+                <option value='sequ' max='1' min='0' breaks='0,0.541,0.81,1.078' label='BRTH_REG_NE' legend='secureA'>Non Native Paulista - North-East</option>
+                <option value='sequ' max='1' min='0' breaks='0,0.1,0.139,0.344' label='BRTH_REG_S' legend='secureA'>Non Native Paulista - South-Central</option>
+                <option value='sequ' max='1' min='0' breaks='0,0.1,0.234,0.545' label='DISP_Y' legend='secureA'>Displacement</option>
+                <option value='sequ' max='14.625' min='0' breaks='0,0.1,1.421,2.981' label='NUM_FAM_LOT' legend='none'>Lot Occupation</option>
+                <option value='sequ' max='7.5' min='0' breaks='0,2.344,3.557,4.77' label='NUM_PPL_HSHD' legend='none'>Household Inhabitants</option>
+                <option value='sequ' max='1' min='0' breaks='0,0.01,0.1,0.287' label='ED_LVL_0' legend='secureA'>Respondent Education - None</option>
+                <option value='sequ' max='1' min='0' breaks='0,0.151,0.427,0.703' label='ED_LVL_1' legend='secureA'>Respondent Education - Elementary</option>
+                <option value='sequ' max='1' min='0' breaks='0,0.098,0.352,0.606' label='ED_LVL_2' legend='secureA'>Respondent Education - High School</option>
+                <option value='sequ' max='1' min='0' breaks='0,0.01,0.106,0.275' label='ED_LVL_3' legend='secureA'>Respondent Education - Undergraduate Deg.</option>
                 <!-- <option value='sequ' max='1' min='0' breaks='0,0,0,0' label='ED_LVL_4'>ED_LVL_4</option> -->
-                <option value='sequ' max='1' min='0' breaks='0,0.236,0.522,0.808' label='ED_LVL_MOT_0'>Respondent Mother's Education - None</option>
-                <option value='sequ' max='1' min='0' breaks='0,0.062,0.331,0.599' label='ED_LVL_MOT_1'>Respondent Mother's Education - Elementary</option>
-                <option value='sequ' max='1' min='0' breaks='0,0.001,0.05,0.175' label='ED_LVL_MOT_2'>Respondent Mother's Education - High</option>
-                <option value='sequ' max='1' min='0' breaks='0,0.001,0.014,0.101' label='ED_LVL_MOT_3'>Respondent Mother's Education - Undergraduate Deg.</option>
+                <option value='sequ' max='1' min='0' breaks='0,0.236,0.522,0.808' label='ED_LVL_MOT_0' legend='secureA'>Respondent Mother's Education - None</option>
+                <option value='sequ' max='1' min='0' breaks='0,0.062,0.331,0.599' label='ED_LVL_MOT_1' legend='secureA'>Respondent Mother's Education - Elementary</option>
+                <option value='sequ' max='1' min='0' breaks='0,0.001,0.05,0.175' label='ED_LVL_MOT_2' legend='secureA'>Respondent Mother's Education - High</option>
+                <option value='sequ' max='1' min='0' breaks='0,0.001,0.014,0.101' label='ED_LVL_MOT_3' legend='secureA'>Respondent Mother's Education - Undergraduate Deg.</option>
                 <!-- <option value='sequ' max='1' min='0' breaks='0,0,0,0' label='ED_LVL_MOT_4'>ED_LVL_MOT_4</option> -->
-                <option value='sequ' max='1' min='0' breaks='0,0.01,0.07,0.24' label='ED_LVL_MOT_5'>Respondent Mother's Education - No Information</option>
+                <option value='sequ' max='1' min='0' breaks='0,0.01,0.07,0.24' label='ED_LVL_MOT_5' legend='secureA'>Respondent Mother's Education - No Information</option>
                 <!-- <option value='sequ' max='1' min='0' breaks='0,0,0,0' label='ED_LVL_MOT_6'>ED_LVL_MOT_6</option> -->
-                <option value='sequ' max='1' min='0' breaks='0,0.178,0.469,0.76' label='ED_LVL_FAT_0'>Respondent Father's Education - None</option>
-                <option value='sequ' max='1' min='0' breaks='0,0.028,0.286,0.544' label='ED_LVL_FAT_1'>Respondent Father's Education - Elementary</option>
-                <option value='sequ' max='1' min='0' breaks='0,0.01,0.05,0.169' label='ED_LVL_FAT_2'>Respondent Father's Education - High</option>
-                <option value='sequ' max='1' min='0' breaks='0,0.001,0.013,0.075' label='ED_LVL_FAT_3'>Respondent Father's Education - Undergraduate Deg.</option>
-                <option value='sequ' max='1' min='0' breaks='0,0,0.002,0.016' label='ED_LVL_FAT_4'>Respondent Father's Education - Graduate Deg.</option>
-                <option value='sequ' max='1' min='0' breaks='0,0.1,0.168,0.411' label='ED_LVL_FAT_5'>Respondent Father's Education - No Information</option>
+                <option value='sequ' max='1' min='0' breaks='0,0.178,0.469,0.76' label='ED_LVL_FAT_0' legend='secureA'>Respondent Father's Education - None</option>
+                <option value='sequ' max='1' min='0' breaks='0,0.028,0.286,0.544' label='ED_LVL_FAT_1' legend='secureA'>Respondent Father's Education - Elementary</option>
+                <option value='sequ' max='1' min='0' breaks='0,0.01,0.05,0.169' label='ED_LVL_FAT_2' legend='secureA'>Respondent Father's Education - High</option>
+                <option value='sequ' max='1' min='0' breaks='0,0.001,0.013,0.075' label='ED_LVL_FAT_3' legend='secureA'>Respondent Father's Education - Undergraduate Deg.</option>
+                <option value='sequ' max='1' min='0' breaks='0,0,0.002,0.016' label='ED_LVL_FAT_4' legend='secureA'>Respondent Father's Education - Graduate Deg.</option>
+                <option value='sequ' max='1' min='0' breaks='0,0.1,0.168,0.411' label='ED_LVL_FAT_5' legend='secureA'>Respondent Father's Education - No Information</option>
                 <!-- <option value='sequ' max='1' min='0' breaks='0,0,0,0' label='ED_LVL_FAT_6'>ED_LVL_FAT_6</option> -->
-                <option value='sequ' max='4' min='0' breaks='0,0.224,1.12,2.016' label='NUM_SCH_AG'>School Age Children</option>
-                <option value='sequ' max='1' min='0' breaks='0,0.19,0.476,0.761' label='EMPL_Y'>Employment</option>
-                <option value='sequ' max='7640' min='0' breaks='0,857.928,1743.932,2629.936' label='INCOME'>Income</option>
-                <option value='sequ' max='1' min='0' breaks='0,0.1,0.094,0.237' label='SPCL_NEEDS'>Special Needs</option>
-                <option value='sequ' max='1' min='0' breaks='0,0.1,0.221,0.459' label='USE_HM_INCM'>Home Income Generation</option>
+                <option value='sequ' max='4' min='0' breaks='0,0.224,1.12,2.016' label='NUM_SCH_AG' legend='none'>School Age Children</option>
+                <option value='sequ' max='1' min='0' breaks='0,0.19,0.476,0.761' label='EMPL_Y' legend='secureA'>Employment</option>
+                <option value='sequ' max='7640' min='0' breaks='0,857.928,1743.932,2629.936' label='INCOME' legend='none'>Income</option>
+                <option value='sequ' max='1' min='0' breaks='0,0.1,0.094,0.237' label='SPCL_NEEDS' legend='secureA'>Special Needs</option>
+                <option value='sequ' max='1' min='0' breaks='0,0.1,0.221,0.459' label='USE_HM_INCM' legend='secureA'>Home Income Generation</option>
             </optgroup>
         <optgroup label="Physical">
-            <option value='sequ' max='8' min='1' breaks='1,1.774,2.656,3.537' label='NUM_FLR'>Building Height</option>
-            <option value='sequ' max='1' min='0' breaks='0,0.434,0.723,1.011' label='RENOV'>Home Expansion</option>
-                <option value='sequ' max='5' min='0' breaks='0,2.307,3.139,3.972' label='BLDG_QLTY'>Building Quality and Physical Consolidation</option>
+            <option value='sequ' max='8' min='1' breaks='1,1.774,2.656,3.537' label='NUM_FLR' legend='none'></option>Building Height</option>
+            <option value='sequ' max='1' min='0' breaks='0,0.434,0.723,1.011' label='RENOV' legend='secureA'>Home Expansion</option>
+                <option value='sequ' max='5' min='0' breaks='0,2.307,3.139,3.972' label='BLDG_QLTY' legend='none'>Building Quality and Physical Consolidation</option>
             </optgroup>
             <optgroup label="Urban Livability">
-                <option value='sequ' max='1' min='0' breaks='0,0.41,0.719,1.029' label='SNS_SEC_HSE'>Sense of Security at Home</option>
-                <option value='sequ' max='1' min='0' breaks='0,0.203,0.562,0.922' label='SNS_SEC_NE'>Sense of Security on the Street</option>
-                <option value='sequ' max='1' min='0' breaks='0,0.124,0.541,0.958' label='SNS_GOOD_ACS'>Sense of Access to Public Services</option>
-                <option value='sequ' max='1' min='0' breaks='0,0.1,0.205,0.489' label='ACS_LDR'>Sense of Access to Community Leader</option>
-                <option value='sequ' max='4' min='0' breaks='0,1,2,3' label='LIXO_IMM_VIC'>Everyday challenge – Trash</option>
-                <option value='sequ' max='5' min='0' breaks='0,1,2,3' label='DROGA_IMM_VIC'>Everyday challenge – Drugs</option>
-                <option value='sequ' max='8' min='0' breaks='0,2,4,6' label='BARULHO_IMM_VIC'>Everyday challenge – Noise Pollution</option>
-                <option value='sequ' max='7' min='0' breaks='0,2,4,6' label='NADA_IMM_V'>Everyday challenge – Nothing</option>
-                <option value='sequ' max='3' min='0' breaks='0,0.9,1.9,2.9' label='ASSAULTO_IMM_VIC'>Everyday challenge – Street Assault</option>
-                <option value='sequ' max='4' min='0' breaks='0,1,2,3' label='FUNK_IMM_VIC'>Everyday challenge – Funk Street Parties</option>
-                <option value='sequ' max='1' min='0' breaks='0,0.01,0.097,0.273' label='POL_AFL'>Political Affiliation</option>
-                <option value='sequ' max='1' min='0' breaks='0,0.239,0.535,0.831' label='CUR_INTENT'>Intention</option>
-                <option value='sequ' max='5' min='0' breaks='0,0.638,1.921,3.203' label='POL_PRIOR_TTL'>Critical Change - Title</option>
-                <option value='sequ' max='5' min='0' breaks='0,0.813,2.175,3.537' label='POL_PRIOR_INFRA'>Critical Change - Infrastructure and Sanitation</option>
-                <option value='sequ' max='5' min='0' breaks='0,1.023,2.552,4.08' label='POL_PRIOR_WST_MGT'>Critical Change - Waste Management</option>
-                <option value='sequ' max='5' min='0' breaks='0,0.886,2.279,3.672' label='POL_PRIOR_ENV'>Critical Change - Environmental Stewardship</option>
-                <option value='sequ' max='5' min='0' breaks='0,0.918,2.492,4.066' label='POL_PRIOR_HSG'>Critical Change - Housing</option>
+                <option value='sequ' max='1' min='0' breaks='0,0.41,0.719,1.029' legend='secureA' label='SNS_SEC_HSE'>Sense of Security at Home</option>
+                <option value='sequ' max='1' min='0' breaks='0,0.203,0.562,0.922' legend='secureA' label='SNS_SEC_NE'>Sense of Security on the Street</option>
+                <option value='sequ' max='1' min='0' breaks='0,0.124,0.541,0.958' legend='secureA' label='SNS_GOOD_ACS'>Sense of Access to Public Services</option>
+                <option value='sequ' max='1' min='0' breaks='0,0.1,0.205,0.489' legend='secureA' label='ACS_LDR'>Sense of Access to Community Leader</option>
+                <option value='sequ' max='4' min='0' breaks='0,1,2,3' legend='none' label='LIXO_IMM_VIC'>Everyday challenge – Trash</option>
+                <option value='sequ' max='5' min='0' breaks='0,1,2,3' legend='none' label='DROGA_IMM_VIC'>Everyday challenge – Drugs</option>
+                <option value='sequ' max='8' min='0' breaks='0,2,4,6' legend='none' label='BARULHO_IMM_VIC'>Everyday challenge – Noise Pollution</option>
+                <option value='sequ' max='7' min='0' breaks='0,2,4,6' legend='none' label='NADA_IMM_V'>Everyday challenge – Nothing</option>
+                <option value='sequ' max='3' min='0' breaks='0,0.9,1.9,2.9' legend='none' label='ASSAULTO_IMM_VIC'>Everyday challenge – Street Assault</option>
+                <option value='sequ' max='4' min='0' breaks='0,1,2,3' legend='none' label='FUNK_IMM_VIC'>Everyday challenge – Funk Street Parties</option>
+                <option value='sequ' max='1' min='0' breaks='0,0.01,0.097,0.273' legend='none' label='POL_AFL'>Political Affiliation</option>
+                <option value='sequ' max='1' min='0' breaks='0,0.239,0.535,0.831' legend='secureA' label='CUR_INTENT'>Intention</option>
+                <option value='sequ' max='5' min='0' breaks='0,0.638,1.921,3.203' legend='none' label='POL_PRIOR_TTL'>Critical Change - Title</option>
+                <option value='sequ' max='5' min='0' breaks='0,0.813,2.175,3.537' legend='none' label='POL_PRIOR_INFRA'>Critical Change - Infrastructure and Sanitation</option>
+                <option value='sequ' max='5' min='0' breaks='0,1.023,2.552,4.08' legend='none' label='POL_PRIOR_WST_MGT'>Critical Change - Waste Management</option>
+                <option value='sequ' max='5' min='0' breaks='0,0.886,2.279,3.672' legend='none' label='POL_PRIOR_ENV'>Critical Change - Environmental Stewardship</option>
+                <option value='sequ' max='5' min='0' breaks='0,0.918,2.492,4.066' legend='none' label='POL_PRIOR_HSG'>Critical Change - Housing</option>
             </optgroup>
 
                 <optgroup label="Synthesized Indicators">
