--- a/pr.html
+++ b/pr.html
@@ -248,6 +248,19 @@
     <div id="description-legend" class="cartodb-legend choropleth" style="display: block;">
       <h4 id="selected_column_title"></h4>
       <div id="about-text">about-text</div>
+			<ul id="color-range">
+        <li class="min">0</li>
+        <li class="max">13295</li>
+        <li class="graph count_441">
+          <div class="colors">
+            <div class="quartile"></div>
+            <div class="quartile"></div>
+            <div class="quartile"></div>
+            <div class="quartile"></div>
+            <div class="quartile"></div>
+          </div>
+        </li>
+      </ul>
     </div>
   </div>
   <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
